Fixed style to input search on safari

--- a/app/assets/stylesheets/new_dashboard.css.scss
+++ b/app/assets/stylesheets/new_dashboard.css.scss
@@ -602,6 +602,10 @@
   margin-left: -10px !important;
 }
 
+.search-field {
+  -webkit-appearance: textfield;
+}
+
 @media screen and (min-height: 780px) {
   #onboarding {
     .onboarding {
